k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: knowhere
  labels:
    app: knowhere
spec:
  type: ClusterIP
  selector:
    app: knowhere
  ports:
    - name: http
      port: 80
      targetPort: http
